<resources>
    <plurals name="moviesInLibrary">
        <item quantity="one">movie</item>
        <item quantity="other">movies</item>
    </plurals>
    <plurals name="showsInLibrary">
        <item quantity="one">show</item>
        <item quantity="other">shows</item>f
    </plurals>
    <plurals name="episodes">
        <item quantity="one">episode</item>
        <item quantity="other">episodes</item>
    </plurals>
    <string name="seasons">Seasons</string>
    <plurals name="day">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="hour">
        <item quantity="one">hour</item>
        <item quantity="other">hours</item>
    </plurals>
    <plurals name="hour_short">
        <item quantity="one">hr</item>
        <item quantity="other">hrs</item>
    </plurals>
    <plurals name="minute">
        <item quantity="one">minute</item>
        <item quantity="other">minutes</item>
    </plurals>
    <plurals name="minute_short">
        <item quantity="one">min</item>
        <item quantity="other">mins</item>
    </plurals>
    <plurals name="seasons_selected">
        <item quantity="one">season selected</item>
        <item quantity="other">seasons selected</item>
    </plurals>
    <plurals name="episodes_selected">
        <item quantity="one">episode selected</item>
        <item quantity="other">episodes selected</item>
    </plurals>
    <plurals name="files">
        <item quantity="one">file</item>
        <item quantity="other">files</item>
    </plurals>
    <string name="app_name">NMJManager</string>
    <string name="app_name_movies">NMJManager - Movies</string>
    <string name="app_name_tvshows">NMJManager - TV shows</string>
    <string name="settings_name">Settings</string>
    <string name="newuser_btStartSearch">Start update</string>
    <string name="detailsReleaseDate">Release date</string>
    <string name="detailsGenre">Genres (comma-separated)</string>
    <string name="detailsRunTime">Runtime</string>
    <string name="detailsRating">Rating</string>
    <string name="detailsCertification">Certification</string>
    <string name="noInternet">No active Internet connection</string>
    <string name="errorOccured">An error occurred</string>
    <string name="updatingMovieInfo">Updating movie information…</string>
    <string name="updatingShowInfo">Updating show information…</string>
    <string name="stringNA">N/A</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="removeMovie">Remove movie</string>
    <string name="removeEpisode">Remove episode</string>
    <string name="removeShow">Remove TV show</string>
    <string name="failedToRemoveShow">Could not remove show!</string>
    <string name="failedToRemoveEpisode">Could not remove episode!</string>
    <string name="identifyMovieTitle">Identify movie</string>
    <string name="identifyEpisodeTitle">Identify episode</string>
    <string name="identifyShow">Identify show</string>
    <string name="prefsIdentification">Identification</string>
    <string name="stringSort">Sort</string>
    <string name="prefsSearchNavTitle">Search</string>
    <string name="prefsUI">User Interface</string>
    <string name="prefsUIGeneral">General</string>
    <string name="prefsAppFeedback">Application feedback</string>
    <string name="prefsAppFeedbackDescription">Tell the world what you think of NMJManager on Google Play.</string>
    <string name="prefsIdentificationAndSearch">Identification &amp; search</string>
    <string name="shareWith">Share with…</string>
    <string name="addedToFavs">Added to favorites!</string>
    <string name="removedFromFavs">Removed from favorites!</string>
    <string name="addedToWatchList">Added to Watchlist!</string>
    <string name="removedFromWatchList">Removed from Watchlist!</string>
    <string name="unknownYear">(unknown)</string>
    <string name="addingCover">Downloading new cover art…</string>
    <string name="coverSearchFailed">Cover art search failed!</string>
    <string name="updateCheckBox">Clear library on update</string>
    <string name="stringSearch">Search</string>
    <string name="stringNoPlot">Plot not available.</string>
    <string name="txtSelectFileSources">Select file sources</string>
    <string name="menuFavouriteTitle">Add favorite</string>
    <string name="menuFavouriteTitleRemove">Remove favorite</string>
    <string name="menuShareTitle">Share</string>
    <string name="menuRemoveTitle">Delete</string>
    <string name="menuUpdateTitle">Update library</string>
    <string name="menuAboutContact">Contact developer</string>
    <string name="prefsFileSourcesDescription">Configure the file sources to include in library updates.</string>
    <string name="actorsShowAllPhotos">Photos</string>
    <string name="actorsTaggedPhotos">Tagged photos</string>
    <string name="detailsCast">Cast</string>
    <string name="detailsCrew">Crew</string>
    <string name="chooserMovies">Movies</string>
    <string name="chooserTVShows">TV shows</string>
    <string name="showGuestStars">Guest stars</string>
    <string name="showWriter">Writer</string>
    <string name="showDirector">Director</string>
    <string name="showSeason">Season</string>
    <string name="showEpisode">Episode</string>
    <string name="mainWebLoading">Loading…</string>
    <string name="chooserWebVideos">Web videos</string>
    <string name="fileSources">File sources</string>
    <string name="updateTvShowsTitle">Update TV shows</string>
    <string name="updateMoviesTitle">Update Movies</string>
    <string name="updateThirdStepDescription">The update process runs in the background and may take up to several minutes. It can be cancelled from the notification drawer.</string>
    <string name="options">Options</string>
    <string name="cancel">Cancel</string>
    <string name="selectGenre">Select genre</string>
    <string name="addNMJDatabase">Add a NMJ Source</string>
    <string name="prefsShowGridTitlesTitle">Show titles in overview</string>
    <string name="prefsShowGridTitles">Enable movie and show titles in library overview.</string>
    <string name="prefsCredits">Data sources</string>
    <string name="prefsCreditsTmdbTitle">The open movie database</string>
    <string name="prefsCreditsTmdbDescription">www.themoviedb.org</string>
    <string name="prefsCreditsTraktTitle">Trakt.tv</string>
    <string name="prefsCreditsTraktDescription">www.trakt.tv</string>
    <string name="prefsCreditsTvDb">Online TV Database</string>
    <string name="prefsCreditsTvDbDescription">www.thetvdb.com</string>
    <string name="prefsCreditsTvRage">TV Rage</string>
    <string name="prefsCreditsTvRageDescription">www.tvrage.com</string>
    <string name="prefsCreditsWikipedia">Wikipedia</string>
    <string name="prefsCreditsWikipediaDescription">www.wikipedia.org</string>
    <string name="addFileSourceTitle">Add file source</string>
    <string name="contactDeviceDetails">Device details</string>
    <string name="contactDeviceModel">Model</string>
    <string name="contactDeviceCustomization">Brand / customization</string>
    <string name="contactDeviceManufacturer">Manufacturer</string>
    <string name="contactDeviceOS">Android OS</string>
    <string name="errorSomethingWentWrong">Something went wrong - please try again!</string>
    <string name="updatedMovie">Successfully updated movie!</string>
    <string name="updatedTvShow">Successfully updated TV show!</string>
    <string name="updatedSettings">Successfully updated settings</string>
    <string name="updatingMovies">Updating Movies</string>
    <string name="updatingTvShows">Updating TV Shows</string>
    <string name="analyzing_files">Analyzing files…</string>
    <string name="editMovieTitle">Title</string>
    <string name="editMovieTagline">Tagline</string>
    <string name="editMoviePlot">Description</string>
    <string name="filesourcesDescription">These folders will be indexed for content</string>
    <string name="addCurrentFolderAsFileSource">Add folder as file source</string>
    <string name="enableRootAccess">Request root access</string>
    <string name="enableRootAccessDescription">Request root access at launch, can be useful for some third party applications.</string>
    <string name="widgetsNMJManagerMovies">NMJManager - Movies</string>
    <string name="widgetsNMJManagerShows">NMJManager - TV shows</string>
    <string name="detailsTrailer">Trailer</string>
    <string name="prefsSubfolderSearchTitle">Enable sub-folder search</string>
    <string name="prefsSubfolderSearch">Include sub-folders in video file searches.</string>
    <string name="networkIpAddress">IP address or host name</string>
    <string name="enterNetworkAddress">No IP address or host name!</string>
    <string name="networkUsername">Username</string>
    <string name="networkPassword">Password</string>
    <string name="networkDomain">Domain name</string>
    <string name="networkLogin">Log in to Samba server</string>
    <string name="noConnection">"Connection failed. Make sure you're connected to a network!"</string>
    <string name="sortTitle">Sort by title</string>
    <string name="sortNewestEpisode">Sort by newest episode</string>
    <string name="sortRelease">Sort by release</string>
    <string name="sortFirstAired">Sort by first air date</string>
    <string name="sortRating">Sort by rating</string>
    <string name="sortWeightedRating">Sort by weighted rating</string>
    <string name="sortAdded">Sort by date added</string>
    <string name="sortDuration">Sort by duration</string>
    <string name="choiceAllMovies">All movies</string>
    <string name="choiceOffline">Offline copies</string>
    <string name="choiceFavorites">Favorites</string>
    <string name="choiceGenres">Genres</string>
    <string name="choiceCollections">Collections</string>
    <string name="choiceLists">Lists</string>
    <string name="choicePopular">Popular</string>
    <string name="choiceNowPlaying">Now Playing</string>
    <string name="choiceUpcoming">Upcoming</string>
    <string name="choiceTopRated">Top Rated</string>
    <string name="choiceAvailableFiles">Available files</string>
    <string name="choiceAllShows">All shows</string>
    <string name="choiceYouTube">YouTube</string>
    <string name="choiceReddit">Reddit</string>
    <string name="choiceTedTalks">TED Talks</string>
    <string name="stringJustAdded">Added</string>
    <string name="stringCancelUpdate">Stop update</string>
    <string name="stringUpdateCancelled">Update stopped!</string>
    <string name="stringMarkAsWatched">Mark as watched</string>
    <string name="markedAsWatched">Marked as watched!</string>
    <string name="stringMarkAsUnwatched">Mark as unwatched</string>
    <string name="stringEditMovie">Edit movie</string>
    <string name="browseMedia">Browse artwork</string>
    <string name="openInBrowser">Open in browser</string>
    <string name="removeFromWatchlist">Remove from Watch list</string>
    <string name="watchLater">Watch later</string>
    <string name="addToList">Add to List</string>
    <string name="updateMediaInfo">Update Mediainfo</string>
    <string name="updateImages">Update images</string>
    <string name="updateFromTmdb">Update from TMDb</string>
    <string name="updateFromImdb">Update from IMDb</string>
    <string name="updateData">Update from TMDb</string>
    <string name="deleteVideo">Delete</string>
    <string name="editFull">Edit&#8230;</string>
    <string name="editVideo">Edit</string>
    <string name="removeFromList">Remove from list</string>
    <string name="unidentifiedFiles">Unidentified files</string>
    <string name="filters">Filters</string>
    <string name="IMDb">Open in IMDb</string>
    <string name="TMDb">Open in TMDb</string>
    <string name="random_movie">Random movie</string>
    <string name="view_collection_online">View collection online</string>
</resources>