<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/movie_fav"
        android:icon="@drawable/ic_favorite_outline_white_24dp"
        android:title="@string/menuFavouriteTitleRemove"
        app:showAsAction="always"/>
    <item
        android:id="@+id/watched"
        android:icon="@drawable/ic_visibility_white_24dp"
        android:title="@string/stringMarkAsWatched"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/menuShareTitle"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/watch_list"
        android:icon="@drawable/ic_queue_white_24dp"
        android:title="@string/watchLater"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/add_list"
        android:icon="@drawable/ic_add_list_white_24dp"
        android:title="@string/addToList"/>
    <item
        android:id="@+id/trailer"
        android:title="@string/detailsTrailer"/>
    <item
        android:id="@+id/identify"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/identifyMovieTitle"/>
    <item android:title="@string/stringEditMovie">
        <menu>
            <item
                android:id="@+id/change_cover"
                android:title="@string/browseMedia"/>
            <item
                android:id="@+id/change_all_images"
                android:title="@string/updateImages" />
            <item
                android:id="@+id/update_from_imdb"
                android:title="@string/updateFromImdb"/>
            <item
                android:id="@+id/update_from_tmdb"
                android:title="@string/updateFromTmdb" />
            <item
                android:id="@+id/editMovie"
                android:title="@string/editFull" />
        </menu>
    </item>
    <item android:title="@string/openInBrowser">
        <menu>
            <item
                android:id="@+id/imdb"
                android:title="@string/IMDb" />
            <item
                android:id="@+id/tmdb"
                android:title="@string/TMDb" />
        </menu>
    </item>
    <item
        android:id="@+id/delete_movie"
        android:enabled="true"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/menuRemoveTitle"/>

</menu>