<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/search_textbox"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/stringSearch"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView">
    </item>
    <item
        android:id="@+id/sort"
        android:icon="@drawable/ic_sort_desc_white_24dp"
        android:title="@string/stringSort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/menuSortTitle"
                android:title="@string/sortTitle"/>
            <item
                android:id="@+id/menuSortRelease"
                android:title="@string/sortRelease"/>
            <item
                android:id="@+id/menuSortDuration"
                android:title="@string/sortDuration"/>
            <item
                android:id="@+id/menuSortRating"
                android:title="@string/sortRating"/>
            <item
                android:id="@+id/menuSortAdded"
                android:title="@string/sortAdded"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/filters"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:title="@string/filters"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/update"
        android:icon="@drawable/ic_sync_white_24dp"
        android:title="@string/menuUpdateTitle"
        app:showAsAction="ifRoom">
    </item>

    <group android:id="@+id/group1" >
        <item
            android:id="@+id/random"
            android:icon="@drawable/ic_extension_white_24dp"
            android:title="@string/random_movie">
        </item>
        <item
            android:id="@+id/view_collection_online"
            android:icon="@drawable/ic_language_white_24dp"
            android:title="@string/view_collection_online"
            android:visible="false">
        </item>
        <item
            android:id="@+id/unidentifiedFiles"
            android:icon="@drawable/ic_folder_open_white_24dp"
            android:title="@string/unidentifiedFiles"/>
    </group>

</menu>