<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/favorite_menu"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/menuFavouriteTitle"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/movie_add_fav"
                android:title="@string/menuFavouriteTitle">
            </item>
            <item
                android:id="@+id/movie_remove_fav"
                android:title="@string/menuFavouriteTitleRemove">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/watched_menu"
        android:icon="@drawable/ic_visibility_white_24dp"
        android:title="@string/markedAsWatched"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/movie_watched"
                android:title="@string/stringMarkAsWatched">
            </item>
            <item
                android:id="@+id/movie_unwatched"
                android:title="@string/stringMarkAsUnwatched">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/watchlist_menu"
        android:icon="@drawable/ic_queue_white_24dp"
        android:title="@string/watchLater"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/add_to_watchlist"
                android:title="@string/watchLater">
            </item>
            <item
                android:id="@+id/remove_from_watchlist"
                android:title="@string/removeFromWatchlist">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/add_list_menu"
        android:icon="@drawable/ic_add_list_white_24dp"
        android:title="@string/addToList"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/add_to_list"
                android:title="@string/addToList">
            </item>
            <item
                android:id="@+id/remove_from_list"
                android:title="@string/removeFromList">
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/edit_button_2"
        android:icon="@drawable/ic_edit_white_24dp"
        android:title="@string/editVideo"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/update_from_tmdb"
                android:title="@string/updateData"></item>
            <item
                android:id="@+id/update_images"
                android:title="@string/updateImages"></item>
            <item
                android:id="@+id/update_mediainfo"
                android:title="@string/updateMediaInfo"></item>
        </menu>
    </item>
    <item
        android:id="@+id/delete_button_2"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/deleteVideo"
        app:showAsAction="ifRoom">
    </item>
</menu>